fix router, logo

--- a/BookGarden-Admin/package.json
+++ b/BookGarden-Admin/package.json
@@ -16,10 +16,10 @@
     "moment": "^2.29.1",
     "qrcode.react": "^3.1.0",
     "query-string": "^7.0.0",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-chartjs-2": "^3.0.3",
-    "react-corner-ribbon": "0.0.5",
-    "react-dom": "^17.0.2",
+    "react-corner-ribbon": "^0.0.5",
+    "react-dom": "^16.14.0",
     "react-feather": "^2.0.9",
     "react-google-font-loader": "^1.1.0",
     "react-infinite-scroll-component": "^6.1.0",
