--- a/BookGarden-Backend/.env
+++ b/BookGarden-Backend/.env
@@ -6,4 +6,4 @@ PAYPAL_CLIENT_SECRET=EPtBrUA9Ior6JaXspix7gjbXXvOHpvYuqoSy6Epa4sMfPL2TXrVMa5IscLT
 VNPAY_TMNCODE=P1JPXCUF
 VNPAY_SECRETKEY=ZGL3GNR9M5QZDIAY6QX7AILJYTCGMRPA
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL=http://localhost:3100/api/vnpay/vnpay-ipns
+VNPAY_RETURN_URL=http://localhost:3500/pay
