--- a/BookGarden-Client/package.json
+++ b/BookGarden-Client/package.json
@@ -32,6 +32,7 @@
     "react-google-font-loader": "^1.1.0",
     "react-h5-audio-player": "^3.9.1",
     "react-icons": "^4.2.0",
+    "react-modal-image": "^2.6.0",
     "react-open-weather": "^1.1.5",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
