--- a/BookGarden-Admin/package.json
+++ b/BookGarden-Admin/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.3",
     "recharts": "^2.5.0",
     "sass": "^1.32.8",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "suneditor": "^2.38.8",
