--- a/BookGarden-Backend/package.json
+++ b/BookGarden-Backend/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
+    "slugify": "^1.6.6",
     "unidecode": "^0.1.8"
   }
 }
